Update windows project file to Visual Studio 2015

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 mac/mit_hrtf_lib.xcodeproj/project.xcworkspace/xcuserdata
 mac/mit_hrtf_lib.xcodeproj/project.xcworkspace/xcshareddata
 mac/DerivedData
+*.db
+*.opendb
+*.suo
+win/Debug/
+win/Release/
